# axe-fx-midi

./: .npmignore  Cargo.toml  README.md  boot.properties  build.boot  package-lock.json  package.json
.circleci/: config.yml
src/: lib.rs  parse.rs
src/axe_fx_midi/: ascii.cljc  blocks.cljc  core.cljc  encoders.cljc  macros.clj  main.cljs.edn  models.cljc  modifiers.cljc  npm.cljs  parameters.cljc
test/axe_fx_midi/: ascii_test.cljc  ascii_test.cljs  core_test.cljc  core_test.cljs  parameters_test.cljc  parameters_test.cljs
