[package]
name = "axe_fx_midi"
version = "0.1.0"
authors = ["Bradley J. Spaulding <brad.spaulding@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bspaulding/axe-fx-midi"

[dependencies]
ascii = "1.0.0"

[dev-dependencies]
rand = "0.7.3"
coremidi = "0.3.1"

[lib]
name = "axe_fx_midi"
crate-type = ["staticlib", "cdylib"]
