[package]
name = "axe_fx_midi"
description = "Tools for creating and parsing midi messages for communicating with Fractal Axe-FX devices."
version = "0.1.0"
authors = ["Bradley J. Spaulding <brad.spaulding@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bspaulding/axe-fx-midi"

[dependencies]
ascii = "1.0.0"
num-derive = "0.3.0"
num-traits = "0.2.0"
wasm-bindgen = "0.2"

[dev-dependencies]
rand = "0.7.3"
coremidi = "0.3.1"
pretty_assertions = "0.6.1"

[lib]
name = "axe_fx_midi"
crate-type = ["cdylib", "rlib"]
